--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-      body {
+ body {
         margin:0;
         background-image:url("img/back.jpg");
         background-size:cover;
@@ -199,7 +199,7 @@
     margin-top:30px;
   }
 
-  button:hover {
+  button:active {
     box-shadow:0px 0px 0px;
     transform: translateY(3px);
   }
